chore: add preparation for deploying example pages

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "build-pages": "cd ./example && tsc index.ts"
   },
   "keywords": [],
   "author": "",
