--- a/.github/workflows/page.ci.yml
+++ b/.github/workflows/page.ci.yml
@@ -36,8 +36,8 @@ jobs:
           version: 7.13.5
       - name: Setup Pages
         uses: actions/configure-pages@v2
-      - name: Transform TS file
-        run: npm run build-pages
+      - name: Build Project
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
