chore: change bundle behaviour

--- a/example/package.json
+++ b/example/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && vite build"
   },
   "author": "Kkk",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "vite": "3.1.3"
+  }
 }
