--- a/.github/workflows/page.ci.yml
+++ b/.github/workflows/page.ci.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: './example'
+          path: './example/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
