--- a/example/package.json
+++ b/example/package.json
@@ -10,5 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "vite": "3.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9"
   }
 }
