--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "img-preload",
-  "version": "1.0.0",
+  "name": "@stan_bk/img-preload",
+  "version": "1.0.1",
   "description": "An scheme for imgs loading scheme while page rendering.",
   "main": "index.js",
   "type": "module",
