--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stan_bk/img-preload",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "An scheme for imgs loading scheme while page rendering.",
   "main": "index.js",
   "type": "module",
@@ -12,15 +12,20 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && cd ./example && npm run build",
+    "build": "tsc && vite build && tsc --declaration && cd ./example && npm run build",
     "prepublishOnly": "tsc && vite build"
   },
-  "files": ["dist/*"],
+  "files": [
+    "dist/*"
+  ],
   "keywords": [],
   "author": "Kkk",
   "license": "MIT",
   "dependencies": {
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
+  },
+  "devDependencies": {
+    "vite-plugin-dts": "^1.7.0"
   }
 }
