--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stan_bk/img-preload",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "An scheme for imgs loading scheme while page rendering.",
   "main": "index.js",
   "type": "module",
@@ -18,6 +18,7 @@
   "files": [
     "dist/*"
   ],
+  "types": "dist/types/index.d.ts",
   "keywords": [],
   "author": "Kkk",
   "license": "MIT",
