chore: add reload methods / optimize shade render mechanism / extends global types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "moduleResolution": "Node",
     "strict": true,
     "sourceMap": true,
@@ -19,5 +22,8 @@
     "skipLibCheck": true,
     "experimentalDecorators": true
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "types"
+  ]
 }
