--- a/.github/workflows/page.ci.yml
+++ b/.github/workflows/page.ci.yml
@@ -35,10 +35,9 @@ jobs:
       - name: Build Project
         run: |
           pnpm run build || pnpm run build  # Retry logic
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './dist'
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./example/dist
+          keep_files: true  # 保留之前构建的文件
