--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stan_bk/img-preload",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "An scheme for imgs loading scheme while page rendering.",
   "main": "index.js",
   "type": "module",
@@ -23,11 +23,9 @@
   "keywords": [],
   "author": "Kkk",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
+    "vite-plugin-dts": "^1.7.0",
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
-  },
-  "devDependencies": {
-    "vite-plugin-dts": "^1.7.0"
   }
 }
